# ExHell

./: .gitignore  CMakeLists.txt  ProjectGen.sh  README.md  clean.sh  makefile
.github/workflows/: ci.yaml
ExHell/: pom.xml
ExHell/src/main/java/: module-info.java
ExHell/src/main/java/io/github/samstan4/: App.java  SystemInfo.java
ExHell/src/main/java/io/github/samstan4/view/: MainView.java
ExHell/src/main/resources/io/github/samstan4/: styles.css
archive/: CMakeLists.txt
src/: CMakeLists.txt  exhell_macros.hpp  exhell_wrapper.cpp  exhell_wrapper.hpp  main.cpp
src/engine/: CMakeLists.txt  README.md
src/engine/cell_node/: CMakeLists.txt  cell_node_base.cpp  cell_node_base.hpp  cell_node_type.hpp
src/engine/cell_node/logic_node/: CMakeLists.txt
src/engine/cell_node/text_node/: CMakeLists.txt  text_node.cpp  text_node.hpp
src/persistence/: CMakeLists.txt  exhell_serializer_base.cpp  exhell_serializer_base.hpp
src/persistence/csv/: CMakeLists.txt  exhell_csv_serializer.cpp  exhell_csv_serializer.hpp
src/persistence/json/: CMakeLists.txt  exhell_json_serializer.cpp  exhell_json_serializer.hpp
src/persistence/xml/: CMakeLists.txt  exhell_xml_serializer.cpp  exhell_xml_serializer.hpp
src/ui/: CMakeLists.txt  exhell_main_view.cpp  exhell_main_view.hpp  spreadsheet_main_view.cpp  spreadsheet_main_view.hpp
src/util/: CMakeLists.txt  exhell_utility_functions.cpp  exhell_utility_functions.hpp
tests/: CMakeLists.txt
tests/persistence_tests/: CMakeLists.txt
tests/persistence_tests/csv/: CMakeLists.txt  exhell_csv_serializer_tests.cpp
tests/persistence_tests/json/: CMakeLists.txt  exhell_json_serializer_tests.cpp
tests/persistence_tests/xml/: CMakeLists.txt  exhell_xml_serializer_tests.cpp
tests/util_tests/: CMakeLists.txt  exhell_utility_functions_tests.cpp
